[package]
name = "routeguide"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1" }
async-stream = { version = "0.3" }
futures = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
rand = {version = "0.7"}
# tokio-stream = { version = "0.1", optional = true }
# async-stream = { version = "0.3", optional = true }
# futures = { version = "0.3", default-features = false, optional = true }
# serde = { version = "1.0", features = ["derive"], optional = true }
# serde_json = { version = "1.0", optional = true}
# rand = {version = "0.7", optional = true }

[build-dependencies]
tonic-build = {version = "0.9", features = ["prost"]}

[[bin]]
name = "routeguide-server"
path = "src/server.rs"
# required-features  = ["routeguide"]

[[bin]]
name = "routeguide-client"
path = "src/client.rs"
# required-features  = ["routeguide"]

# [features]
# routeguide = ["dep:async-stream", "dep:futures", "tokio-stream", "dep:rand", "dep:serde", "dep:serde_json"]
# full = ["routeguide"]
# default = ["full"]